:wrench:[add]: 메인 화면 구현(main, mainLeftList, mainBanner), 이미지 추가

--- a/TeamMonstersProject/src/main/webapp/mainLeftList.html
+++ b/TeamMonstersProject/src/main/webapp/mainLeftList.html
@@ -2,9 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>선수목록 리스트</title>
 </head>
 <body>
-	
+	<ul type="disc">
+		<li><a href="mainAction.jsp?pl_position=1" target="right">외야수</a></li>
+		<li><a href="mainAction.jsp?pl_position=2" target="right">내야수</a></li>
+		<li><a href="mainAction.jsp?pl_position=3" target="right">투수</a></li>
+		<li><a href="mainAction.jsp?pl_position=4" target="right">포수</a></li>
+		<li><a href="mainAction.jsp?pl_position=5" target="right">감독&코치</a></li>
+		<li><a href="mainAction.jsp?pl_position=6" target="right">취업선수</a></li>
+	</ul>
+	<a href="insertPl.html" target="right"><input type="button" value="선수 등록"></a>
 </body>
 </html>
