--- a/TeamMonstersProject/src/main/webapp/main.html
+++ b/TeamMonstersProject/src/main/webapp/main.html
@@ -4,7 +4,13 @@
 <meta charset="UTF-8">
 <title>최강야구</title>
 </head>
+
 <body>
-	임시 화면
+  <iframe src="mainBanner.jsp" style="width: 100%;" title="Top Frame" name="top"></iframe>
+  <div style="display: flex;">
+    <iframe src="mainLeftList.html" style="width: 200px; height: 750px;" title="Left Frame" name="left"></iframe>
+    <iframe src="mainCenterList.jsp" style="flex: 1; height: 750px;" title="Right Frame" name="right"></iframe>
+  </div>
 </body>
+
 </html>
