:wrench:[Add&Mod] 선수등록 기능 구현 & PlayerDAO,DTO Date 타입 수정

--- a/TeamMonstersProject/src/main/webapp/insertPl.html
+++ b/TeamMonstersProject/src/main/webapp/insertPl.html
@@ -87,7 +87,7 @@
 </style>
 </head>
 <body>
-<form name="insertForm" action="insertAction.jsp" onsubmit="return checkInput(insertForm);" method="post" enctype="multipart/form-data">
+<form name="insertForm" action="insertPlAction.jsp" onsubmit="return checkInput(insertForm);" method="get" enctype="multipart/form-data">
 <div class = "bbplayer">
 	<!-- 1. 로고 -->
 	<img class="logo" src="./img/logo.png">
