--- a/TeamMonstersProject/src/main/webapp/insertPl.html
+++ b/TeamMonstersProject/src/main/webapp/insertPl.html
@@ -22,16 +22,31 @@
     }
     function checkInput(form) {
         var pl_physical = form.pl_physical.value;
-        var regex = /^\d{1,3}cm, \d{1,3}kg$/; // 숫자 1-3자리, "cm, " 문자열, 숫자 1-3자리, "kg" 문자열 형식을 검사하는 정규식
-
-        if (!regex.test(pl_physical)) {
+        
+        var regex = /^[0-9]+$/; // 
+        var regex2 = /^\d{1,3}cm, \d{1,3}kg$/; // 숫자 1-3자리, "cm, " 문자열, 숫자 1-3자리, "kg" 문자열 형식을 검사하는 정규식
+		
+        if (!regex2.test(pl_physical)) {
             alert("허용되지 않는 형식입니다. 형식은 (숫자)cm, (숫자)kg 여야 합니다.");
+            return false; // 유효성 검사 실패
+        }
+        
+        if(!regex.test(form.pl_backNo.value)){
+            alert("허용되지 않는 형식입니다. 등번호는 숫자만 입력해야 합니다.");
             return false; // 유효성 검사 실패
         }
 
         return true; // 유효성 검사 성공
     }
-
+	function checkNumber(event) {
+  		if(event.key === '.' 
+     	|| event.key === '-'
+     	|| event.key >= 0 && event.key <= 9) {
+    	return true;
+  		}
+  
+  	return false;
+	}
 </script>
 
 <style>
@@ -117,7 +132,7 @@
     </div>
 	<div class = "field">
         <b>등번호</b>
-        <input name = "pl_backNo" type = "text" required>
+        <input name = "pl_backNo" type="text" onkeypress="return checkNumber(event)" required>
     </div>
 	<div class = "field">
         <b>신체정보</b>
