🎨[add & mod]: 아직 오류남

--- a/TeamMonstersProject/src/main/webapp/main.html
+++ b/TeamMonstersProject/src/main/webapp/main.html
@@ -8,7 +8,7 @@
 <body>
   <iframe src="mainBanner.jsp" style="width: 100%;" title="Top Frame" name="top"></iframe>
   <div style="display: flex;">
-    <iframe src="mainLeftList.html" style="width: 200px; height: 750px;" title="Left Frame" name="left"></iframe>
+    <iframe src="mainLeftList.jsp" style="width: 200px; height: 750px;" title="Left Frame" name="left"></iframe>
     <iframe src="mainCenterList.jsp" style="flex: 1; height: 750px;" title="Right Frame" name="right"></iframe>
   </div>
 </body>
