--- a/TeamMonstersProject/src/main/webapp/register.html
+++ b/TeamMonstersProject/src/main/webapp/register.html
@@ -15,27 +15,17 @@
 			var result = true;
             var msg = "";
 			var check = /[^0-9-]/;//숫자와-를 뺀 모든 문자
-			if(!form.mem_name.value) {
+			
+			var pwd = document.getElementById("mem_pwd1");
+			var ckpwd = document.getElementById("mem_pwd2");
+			
+			if(check.test(form.mem_phone.value)){
 				result = false;
-                msg = "이름을 입력해주세요.";}
-			if(!form.mem_id.value) {
+				msg = "휴대폰 번호는 숫자만 입력해주세요.";}
+			if(pwd !== ckpwd){
 				result = false;
-				msg = "ID를 입력해주세요.";}
-			if(!form.mem_pwd.value) {
-				result = false;
-				msg = "비밀번호를 입력해주세요.";}
-			//숫자가 아니면(a~z, A~Z, ㄱ~힣 안됨) : regular experssion
-			//RegExp 클래스가 있음
-			if(!form.mem_phone.value) {
-				result = false;
-				msg = "휴대폰 번호를 입력해주세요.";}
-			else{
-				if(check.test(form.mem_phone.value)){
-				result = false;
-				msg = "휴대폰 번호는 숫자만 입력해주세요.";}}
-			if(!form.mem_email.value){
-				result = false;
-				msg = "Email을 입력해주세요.";}
+				msg = "비밀번호가 일치하지 않습니다.";
+			}
 			if(result==false){
                 alert(msg);
             }
@@ -52,10 +42,11 @@
         <br><br>
 		<table>
 			<tr><td>* 이름 </td><td><input name="mem_name"></td></tr>
-			<tr><td>* ID </td><td><input name="mem_id" maxlength="20"><button onclick="winopen()">중복체크</button></td></tr>
-			<tr><td>* PWD </td><td><input name="mem_pwd" maxlength="20" type="password"></td></tr>
-			<tr><td>* 이메일 </td><td><input name="mem_email" type="email" placeholder="aa@bb.cc"></td></tr>
-			<tr><td>* 전화번호 </td><td><input name="mem_phone" placeholder="숫자만 입력"></td></tr>
+			<tr><td>* ID </td><td><input name="mem_id" maxlength="20" required><button onclick="winopen()">중복체크</button></td></tr>
+			<tr><td>* PWD </td><td><input id="mem_pwd1" name="mem_pwd" maxlength="20" type="password" required></td></tr>
+			<tr><td>* PWD 확인 </td><td><input id="mem_pwd2" maxlength="20" type="password" required></td></tr>
+			<tr><td>* 이메일 </td><td><input name="mem_email" type="email" placeholder="aa@bb.cc" required></td></tr>
+			<tr><td>* 전화번호 </td><td><input name="mem_phone" placeholder="숫자만 입력" required></td></tr>
 			<tr><td>* 구분 </td><td><select name="mem_role">
                     <option value = "guest">1. 팬</option>
                     <option value = "bplayer">2. 선수</option>
