--- a/TeamMonstersProject/src/main/webapp/login.html
+++ b/TeamMonstersProject/src/main/webapp/login.html
@@ -54,8 +54,8 @@
 	<!-- method는 차후에 "post"로 변경하기!!!! -->
 	<form method="get" class="loginForm" name="login" action="loginAction.jsp">
         <div class="inputWrapper">
-		    <input type="text" name = "mem_id" maxlength="20" placeholder="아이디" required>
-            <input type="password" name = "mem_pwd" maxlength="20" placeholder="비밀번호" required>
+		    <input type="text" name = "memId" maxlength="20" placeholder="아이디" required>
+            <input type="password" name = "memPwd" maxlength="20" placeholder="비밀번호" required>
         </div>    
         <input class="loginBtn" type="submit" value="로그인">
 	</form>
