--- a/TeamMonstersProject/src/main/webapp/register.html
+++ b/TeamMonstersProject/src/main/webapp/register.html
@@ -2,99 +2,198 @@
 <html>
 
 <head>
-	<style>
-		table,
-		td,
-		th {
-			margin-left: auto;
-			margin-right: auto;
-		}
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
 
-		;
-	</style>
-	<meta charset="UTF-8">
-	<title>회원가입 화면</title>
-	<script type="text/javascript">
-		function checkInput(form) {
-			//alert(form.name.value);
-			var result = true;
-			var msg = "";
-			var check = /[^0-9-]/;//숫자와-를 뺀 모든 문자
+    *{
+    box-sizing: border-box; /*전체에 박스사이징*/
+    outline: none; /*focus 했을때 테두리 나오게 */
+    }
 
-			var pwd = form.memPwd1.value;;
-			var ckpwd = form.memPwd1.value;;
+    body {
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size: 16px;
+      background-color: #ffffff;
+      line-height: 1.5em;
+      color: #222;
+      margin: 0;
+    }
 
-			if (check.test(form.memPhone.value)) {
-				result = false;
-				msg = "휴대폰 번호는 숫자만 입력해주세요.";
-			}
-			if (pwd !== ckpwd) {
-				result = false;
-				msg = "비밀번호가 일치하지 않습니다.";
-			}
-			if (result == false) {
-				alert(msg);
-			}
-			return result; //form - onsubmit= return true : form.submit()과 동일
-		}
-		function winopen() {
-			window.open("regDupCheck.jsp?memId=" + document.form1.memId.value, "", "width=500, height=300");
-		}
-	</script>
+    /*member*/
+    .registerMember {
+      color: #2a009e;
+      width: 400px;
+      /* border: 1px solid #000; */
+      margin: auto;
+      /*중앙 정렬*/
+      display: block;
+      padding: 0 20px;
+      margin-bottom: 20px;
+    }
+
+    #regText{
+      /*중앙 정렬*/
+      display: block;
+      margin : auto;
+      text-align: center;
+    }
+
+    #mainTitle {
+      color: #2a009e;
+      text-align: center;
+      /*수직 정렬하기 */
+      margin-bottom: 5px;
+      font-size: 25pt;
+    }
+
+    .registerMember .logo {
+      /*로고는 이미지라 인라인 블록이니까 마진 오토 안됨 블록요소만 됨 */
+      display: block;
+      margin: 10px auto;
+    }
+
+    .field {
+      margin: auto;
+      /*상하로 좀 띄워주기*/
+    }
+
+    .field #info_id {
+      position: relative;
+    }
+
+    #info_id button {
+      position: absolute;
+      width: 80px;
+      height: 40px;
+      top: 0;
+      bottom: 5px;
+      right: 5px;
+      margin: auto 0;
+      border-radius: 3px;
+      background-color: #2a009e;
+      color: #fff;
+      font-size: 11pt;
+      font-weight : 900;
+    }
+
+    .registerMember b {
+      /* border: 1px solid #000; */
+      display: block;
+      /*수직 정렬하기 */
+      margin-bottom: 5px;
+      font-size: 15pt;
+    }
+
+    .registerMember input,
+    .registerMember select {
+      border: 1px solid #dadada;
+      padding: 15px;
+      width: 100%;
+      margin-bottom: 5px;
+    }
+
+    .regButton{
+      border-radius: 3px;
+      background-color: #2a009e;
+      color: #fff;
+      font-weight : 900;
+      width : 100%;
+      height: 40px;
+      padding : 0;
+      font-size: 12pt;
+      padding : 0;
+    }
+
+    .registerMember input:focus,
+    .registerMember select:focus {
+      border: 2px solid #0003ce;
+    }
+  </style>
+  <meta charset="UTF-8">
+  <title>회원가입 화면</title>
+  <script type="text/javascript">
+    function checkInput(form) {
+      //alert(form.name.value);
+      var result = true;
+      var msg = "";
+      var check = /[^0-9-]/;//숫자와-를 뺀 모든 문자
+
+      var pwd = form.memPwd1.value;;
+      var ckpwd = form.memPwd1.value;;
+
+      if (check.test(form.memPhone.value)) {
+        result = false;
+        msg = "휴대폰 번호는 숫자만 입력해주세요.";
+      }
+      if (pwd !== ckpwd) {
+        result = false;
+        msg = "비밀번호가 일치하지 않습니다.";
+      }
+      if (result == false) {
+        alert(msg);
+      }
+      return result; //form - onsubmit= return true : form.submit()과 동일
+    }
+    function winopen() {
+      window.open("regDupCheck.jsp?memId=" + document.form1.memId.value, "", "width=500, height=300");
+    }
+  </script>
 </head>
 
 <body>
-	<form name="form1" action="registerAction.jsp" onsubmit="return checkInput(form1);" method="get">
-		<center>
-			<h1> 회원 가입 </h1>
-		</center>
-		<br><br>
-		<table>
-			<tr>
-				<td>* 이름 </td>
-				<td><input name="memName"></td>
-			</tr>
-			<tr>
-				<td>* ID </td>
-				<td><input name="memId" maxlength="20" required><button onclick="winopen()">중복체크</button></td>
-			</tr>
-			<tr>
-				<td>* PWD </td>
-				<td><input id="memPwd1" name="memPwd" maxlength="20" type="password" required></td>
-			</tr>
-			<tr>
-				<td>* PWD 확인 </td>
-				<td><input id="memPwd2" maxlength="20" type="password" required></td>
-			</tr>
-			<tr>
-				<td>* 이메일 </td>
-				<td><input name="memEmail" type="email" placeholder="aa@bb.cc" required></td>
-			</tr>
-			<tr>
-				<td>* 전화번호 </td>
-				<td><input name="memPhone" placeholder="숫자만 입력" required></td>
-			</tr>
-			<tr>
-				<td>* 구분 </td>
-				<td><select name="memRole">
-						<option value="guest">1. 팬</option>
-						<option value="bplayer">2. 선수</option>
-						<option value="admin">3. 관리자</option>
-				</td>
-			</tr>
-		</table>
-		<br><br>
-		<center>
-			<tr>
-				<td><button type="submit">가입하기</button></td>
-			</tr>
-		</center><br>
-		<center>
-			<tr>
-				<td><a href="login.jsp">이미 계정이 있으신가요?</a></td>
-			</tr>
-		</center>
-	</form>
+  <form name="form1" action="registerAction.jsp" onsubmit="return checkInput(form1);" method="get">
+    <div class="registerMember">
+      <img class="logo" src="logo.png">
+
+      <div class=".title_text">
+        <b id="mainTitle"> 회원 가입 </b>
+        <br><br>
+      </div>
+      <div class="field">
+        <b>* 이름 </b>
+        <td><input name="memName" required></td>
+      </div>
+      <div class="field">
+        <b>* ID </b>
+        <div id="info_id">
+        <input name="memId" maxlength="20" required>
+        <button onclick="winopen()">중복체크</button>
+        </div>
+      </div>
+      <div class="field">
+        <b>* PWD </b>
+        <input id="memPwd1" name="memPwd" maxlength="20" type="password" required>
+      </div>
+      <div class="field">
+        <b>* PWD 확인 </b>
+        <input id="memPwd2" maxlength="20" type="password" required>
+      </div>
+
+      <div class="field">
+        <b>* 이메일 </b>
+        <input name="memEmail" type="email" placeholder="aa@bb.cc" required>
+      </div>
+
+      <div class="field">
+        <b>* 전화번호 </b>
+        <input name="memPhone" placeholder="숫자만 입력" required>
+      </div>
+
+      <div class="field">
+        <b>* 구분 </b>
+        <select name="memRole">
+          <option value="guest">1. 팬</option>
+          <option value="bplayer">2. 선수</option>
+          <option value="admin">3. 관리자</option>
+        </select>
+      </div>
+      <br>
+
+      <button class="regButton" type="submit" >가입하기</button>
+      <br><br>
+      <a id = "regText" href="login.jsp">이미 계정이 있으신가요?</a>
+    </div>
+  </form>
 </body>
 
 </html>
