🚑[mod]: 회원가입 이미지파일 경로 수정

--- a/TeamMonstersProject/src/main/webapp/register.html
+++ b/TeamMonstersProject/src/main/webapp/register.html
@@ -143,7 +143,7 @@
 <body>
   <form name="form1" action="registerAction.jsp" onsubmit="return checkInput(form1);" method="get">
     <div class="registerMember">
-      <img class="logo" src="logo.png">
+      <img class="logo" src="./img/logo.png">
 
       <div class=".title_text">
         <b id="mainTitle"> 회원 가입 </b>
